[package]
name = "etf-trace"
version = "0.1.0"
edition = "2021"

description = "Capture DWT/ITM trace data using the embedded trace FIFO"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.19.0"
env_logger = "0.9"
bitfield = "0.13"
clap = { version = "3.1", features = ["derive"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
log = "0.4.17"
itm = "0.9.0-rc.1"
